// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. pull quote in culture magazine 1`] = `
.c0 {
  color: #333333;
  font-family: "TimesModern-Regular";
  font-size: 25px;
  line-height: 30px;
}

.c0 cite {
  font-style: normal;
}

@media (min-width:768px) {
  .c0 {
    font-size: 30px;
    line-height: 35px;
  }
}

<style>
.S1 {
  margin-top: 0px;
}

.S2 {
  color: rgba(105,105,105,1.00);
  font-family: GillSansMTStd-Medium;
  font-size: 13px;
  line-height: 13px;
  margin-bottom: 0px;
}

.S3 {
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  align-items: center;
  display: flex;
  -ms-flex-direction: row;
  -webkit-box-direction: normal;
  -webkit-box-orient: horizontal;
  -webkit-flex-direction: row;
  flex-direction: row;
  height: 20px;
  margin-top: 10px;
}

.S4 {
  margin-bottom: 15px;
  margin-top: 0px;
}

.IS1 {
  color: rgba(105,105,105,1.00);
  font-family: Flama-Bold;
  font-size: 75px;
  margin-bottom: -40px;
  margin-left: -3px;
}
</style>

<blockquote
  url=""
>
  <div
    className="css-view-1dbjc4n r-marginBottom-ku1wi2 r-marginTop-1mnahxq S4"
  >
    <div
      className="css-text-76zvg2 r-marginTop-1mnahxq IS1 S1"
    >
      “
    </div>
    <div
      className="c0 responsiveweb__PullQuoteContent-sc-16yokeu-0 c0 css-text-76zvg2"
    >
      <cite>
        Some content
      </cite>
    </div>
    <div
      className="css-view-1dbjc4n r-alignItems-1awozwy r-display-6koalj r-flexDirection-18u37iz r-height-z80fyv r-marginTop-156q2ks S3"
    >
      <div
        className="css-text-76zvg2 r-color-1khp51w r-fontFamily-j2s0nr r-fontSize-n6v787 r-lineHeight-1akm30i r-marginBottom-p1pxzi S2"
      >
        A caption
      </div>
      <div
        className="css-text-76zvg2 r-color-1khp51w r-fontFamily-j2s0nr r-fontSize-n6v787 r-lineHeight-1akm30i r-marginBottom-p1pxzi S2"
      >
        , Some extra text
      </div>
    </div>
  </div>
</blockquote>
`;

exports[`2. pull quote in style magazine 1`] = `
.c0 {
  color: #333333;
  font-family: "TimesModern-Regular";
  font-size: 25px;
  line-height: 30px;
}

.c0 cite {
  font-style: normal;
}

@media (min-width:768px) {
  .c0 {
    font-size: 30px;
    line-height: 35px;
  }
}

<style>
.S1 {
  color: rgba(105,105,105,1.00);
  margin-top: 0px;
}

.S2 {
  color: rgba(105,105,105,1.00);
  font-family: GillSansMTStd-Medium;
  font-size: 13px;
  line-height: 13px;
  margin-bottom: 0px;
}

.S3 {
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  align-items: center;
  display: flex;
  -ms-flex-direction: row;
  -webkit-box-direction: normal;
  -webkit-box-orient: horizontal;
  -webkit-flex-direction: row;
  flex-direction: row;
  height: 20px;
  margin-top: 10px;
}

.S4 {
  margin-bottom: 15px;
  margin-top: 0px;
}

.IS1 {
  font-family: CenturyGothic-Bold;
  font-size: 75px;
  margin-bottom: -40px;
  margin-left: -5px;
}
</style>

<blockquote
  url=""
>
  <div
    className="css-view-1dbjc4n r-marginBottom-ku1wi2 r-marginTop-1mnahxq S4"
  >
    <div
      className="css-text-76zvg2 r-color-1khp51w r-marginTop-1mnahxq IS1 S1"
    >
      “
    </div>
    <div
      className="c0 responsiveweb__PullQuoteContent-sc-16yokeu-0 c0 css-text-76zvg2"
    >
      <cite>
        Some content
      </cite>
    </div>
    <div
      className="css-view-1dbjc4n r-alignItems-1awozwy r-display-6koalj r-flexDirection-18u37iz r-height-z80fyv r-marginTop-156q2ks S3"
    >
      <div
        className="css-text-76zvg2 r-color-1khp51w r-fontFamily-j2s0nr r-fontSize-n6v787 r-lineHeight-1akm30i r-marginBottom-p1pxzi S2"
      >
        A caption
      </div>
      <div
        className="css-text-76zvg2 r-color-1khp51w r-fontFamily-j2s0nr r-fontSize-n6v787 r-lineHeight-1akm30i r-marginBottom-p1pxzi S2"
      >
        , Some extra text
      </div>
    </div>
  </div>
</blockquote>
`;

exports[`3. pull quote in the sunday times magazine 1`] = `
.c0 {
  color: #333333;
  font-family: "TimesModern-Regular";
  font-size: 25px;
  line-height: 30px;
}

.c0 cite {
  font-style: normal;
}

@media (min-width:768px) {
  .c0 {
    font-size: 30px;
    line-height: 35px;
  }
}

<style>
.S1 {
  color: rgba(105,105,105,1.00);
  margin-top: 0px;
}

.S2 {
  color: rgba(105,105,105,1.00);
  font-family: GillSansMTStd-Medium;
  font-size: 13px;
  line-height: 13px;
  margin-bottom: 0px;
}

.S3 {
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  align-items: center;
  display: flex;
  -ms-flex-direction: row;
  -webkit-box-direction: normal;
  -webkit-box-orient: horizontal;
  -webkit-flex-direction: row;
  flex-direction: row;
  height: 20px;
  margin-top: 10px;
}

.S4 {
  margin-bottom: 15px;
  margin-top: 0px;
}

.IS1 {
  font-family: Tiempos-Headline-Bold;
  font-size: 75px;
  margin-bottom: -40px;
  margin-left: -2px;
}
</style>

<blockquote
  url=""
>
  <div
    className="css-view-1dbjc4n r-marginBottom-ku1wi2 r-marginTop-1mnahxq S4"
  >
    <div
      className="css-text-76zvg2 r-color-1khp51w r-marginTop-1mnahxq IS1 S1"
    >
      “
    </div>
    <div
      className="c0 responsiveweb__PullQuoteContent-sc-16yokeu-0 c0 css-text-76zvg2"
    >
      <cite>
        Some content
      </cite>
    </div>
    <div
      className="css-view-1dbjc4n r-alignItems-1awozwy r-display-6koalj r-flexDirection-18u37iz r-height-z80fyv r-marginTop-156q2ks S3"
    >
      <div
        className="css-text-76zvg2 r-color-1khp51w r-fontFamily-j2s0nr r-fontSize-n6v787 r-lineHeight-1akm30i r-marginBottom-p1pxzi S2"
      >
        A caption
      </div>
      <div
        className="css-text-76zvg2 r-color-1khp51w r-fontFamily-j2s0nr r-fontSize-n6v787 r-lineHeight-1akm30i r-marginBottom-p1pxzi S2"
      >
        , Some extra text
      </div>
    </div>
  </div>
</blockquote>
`;
